# natechurch_esphome

./: .gitignore  LICENSE  README.md  esphome.code-workspace  pyproject.toml  secrets.yaml.example
src/: christmas_lights.yaml  dehumidifier_leak_sensor.yaml
src/templates/: common.yaml  defaults.yaml  leak_sensor.yaml  mqtt.yaml  wyze_outdoor_plug.yaml
wiki/: README.md  leak_sensor.md  methodology.md  wyze_outdoor_plug.md
