[tool.poetry]
name = "esphome-project"
version = "0.1.0"
description = ""
authors = ["NateChurch <nathan_church@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
esphome = "^2025.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
